# servier-data-jobs

./: .gitignore  README.md  extract.py  graph_generator.py  load.py  main.py  pyproject.toml  requirements.txt  transform.py
data/: drugs_graph_v1.json
tests/: test_transform.py
utils/: extract.py  load.py  transform.py
