[tool.poetry]
name = "servier-data-pipeline"
version = "0.1.0"
description = "This script generates a JSON graph, linking drugs to journals and publications in PubMed and clinical trials."
authors = ["Khaled Fakhfakh <fakhfakh.k@sfeir.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
